New buttons style

--- a/static/dashboards/index.html
+++ b/static/dashboards/index.html
@@ -179,17 +179,13 @@ text-decoration: none;
         <header>
           <a href="http://ascot.astro.washington.edu/dashboards/" id="logo"></a>
         </header>
-        <a id="createDashboardButton" href="#" class="button primary toRight" style="width: 150px; margin: auto; margin-top: 170px; padding: 15px" role="button">
-          <span>START</span> 
-        </a>
-        <button class="default">Test Default Button</button>     
+        <button class="big toRight" style="width: 150px; margin-top: 250px;">Create Dashboard</button>     
+        <button>Test Default Button</button>     
         <footer><a href="http://www.astro.washington.edu/" id="departmentLogo"></a></footer>
       </div> 
       <div class="box right">
         <p>Choose your gadgets:</p>         
-        <a id="createDashboardButton" href="#" class="button primary toFront" style="width: 150px; margin-top: 250px; padding: 15px;" role="button">
-          <span>Start</span> 
-        </a>
+        <button class="big toFront" style="width: 150px; margin-top: 250px;">Create Dashboard</button>     
         <footer><a href="http://www.astro.washington.edu/" id="departmentLogo"></a></footer>
       </div>
     </div> 
